[package]
name = "unsplash-api"
version = "0.1.0"
authors = ["luke.simpson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# main
actix-web = "1.0.8"
actix-files = "0.1.6"
futures = "0.1.29"
lazy_static = "1.4.0"

# lib
reqwest = "0.9.22"
serde = "1.0.101"
percent-encoding = "2.1.0"
